--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <div class="container pt-3">
         <div class="row align-items-center justify-content-center">
           <div class="col-md-5">
-            <h2 class="pb-2">Project Overview</h2>
+            <h1 class="pb-2">AI Search and Rescue</h1>
             <p>
               The primary goal of this project is to explore the use of Artificial Intelligence and
               related computational methods in support of Search and Rescue missions.
