--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <!-- Current Work -->
     <section id="current-work">
       <div class="container pt-3">
-        <div class="row align-items-center justify-content-center">
+        <div class="row justify-content-center">
           <div class="col-md-5">
             <h2>Background</h2>
             <p>
