--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
           </div>
 
           <div class="col-md-6 col-lg-3 item">
-            <div class="box" style="background-image: url(https://i.imgur.com/0Cdlenp.jpg)">
+            <div class="box" style="background-image: url(images/meha.jpeg)">
               <div class="cover">
                 <h3 class="name">Meha Sharma</h3>
                 <p class="title">Student Researcher</p>
@@ -257,7 +257,7 @@
           </div>
 
           <div class="col-md-6 col-lg-3 item">
-            <div class="box" style="background-image: url(https://i.imgur.com/0Cdlenp.jpg)">
+            <div class="box" style="background-image: url(images/Sidd.jpeg)">
               <div class="cover">
                 <h3 class="name">Siddarth Viswanathan</h3>
                 <p class="title">Student Researcher</p>
